--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -1,7 +1,6 @@
-<% if @current_user %>
-  <h4>Welcome <%= @current_user.name %>!</h4>
-<%end%>
-
+<%# if @current_user %>
+  <!-- <h4>Welcome <%# @current_user.name %>!</h4> -->
+<%#end%>
 <h1> Cool places in Sydney </h1>
 
 
