--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -1,11 +1,12 @@
-<%# if @current_user %>
-  <!-- <h4>Welcome <%# @current_user.name %>!</h4> -->
-<%#end%>
+<% if @current_user %>
+  <h4>Welcome <%= @current_user.name %>!</h4>
+<%end%>
 <h1> Cool places in Sydney </h1>
 
+<%= link_to "Add a cool place", new_place_path  %>
 
 <ul>
-  <%= @places.each do |place| %>
+  <% @places.each do |place| %>
     <li>
       <%= link_to place.name, place_path(place.id) %>
     </li>
