--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,23 +1,27 @@
 
 <%= form_for @user do |f| %>
   <%= render partial: "includes/form_errors", locals: {form: f} %>
-  <p> Please provide this info to signup ! </p>
+  <h3> Please provide this info to signup ! </h3>
   <div class="ui input focus">
     <div>
       <p>
         <%= "Name" %>
+      </p>
+      <p>
         <%= f.text_field :name %>
       </p>
       <p>
         <%= "Email    " %>
+      </p>
+      <p>
         <%= f.text_field :email %>
       </p>
       <p>
         <%= f.label :password %>
+      </p>
+      <p>
         <%= f.password_field :password %>
       </p>
-    </div>
-    <div>
       <p>
         <%= f.submit "Signup" %>
       </p>
