--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,7 +15,7 @@
  */
 
  .ui.main.text.container{
-   margin-top:60px;
+   margin-top:80px;
    margin-bottom: 20px;
 
  }
@@ -27,4 +27,8 @@
 .ui.inverted.vertical.footer.segment{
   background-color: #a06105;
   color: black;
+}
+
+.ui.container {
+  width: 700px;
 }
