--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -8,10 +8,34 @@
   </div>
 <%end%>
 
-<h3> Address </h3>
-<p> <%= "#{@place.int_number}  #{@place.street_number}  #{@place.street_name},  #{@place.suburb},  #{@place.state},  #{@place.postcode},  #{@place.country}"  %>
-</p>
+<p> </p>
 
+<div class="ui accordion">
+  <div class="title">
+    <i class="dropdown icon"></i>
+    Address
+  </div>
+  <div class="content">
+    <p class="transition visible" style="display: block !important;">
+      <%= "#{@place.int_number}  #{@place.street_number}  #{@place.street_name},  #{@place.suburb},  #{@place.state},  #{@place.postcode},  #{@place.country}"  %>
+    </p>
+  </div>
+  <div class="title">
+    <i class="dropdown icon"></i>
+    What kinds of dogs are there?
+  </div>
+  <div class="content">
+    <p class="transition hidden">There are many breeds of dogs. Each breed varies in size and temperament. Owners often select a breed of dog that they find to be compatible with their own lifestyle and desires from a companion.</p>
+  </div>
+  <div class="title">
+    <i class="dropdown icon"></i>
+    How do you acquire a dog?
+  </div>
+  <div class="content">
+    <p class="transition hidden">Three common ways for a prospective owner to acquire a dog is from pet shops, private owners, or shelters.</p>
+    <p class="transition hidden">A pet shop may be the most convenient way to buy a dog. Buying a dog from a private owner allows you to assess the pedigree and upbringing of your dog before choosing to take it home. Lastly, finding your dog from a shelter, helps give a good home to a dog who may not find one so readily.</p>
+  </div>
+</div>
 
 
 <h3> Features you can find here: </h3>
