--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -43,7 +43,17 @@
           <h3> Features you can find here: </h3>
           <ul>
             <% @place.features.each do |fe| %>
-            <li><%= link_to fe.feature_name, feature_path(fe.id) %></li>
+            <li><%= link_to fe.feature_name, feature_path(fe.id) %> <%= fe.review_counts[true] || 0 %> / <%= fe.review_counts[false] || 0 %>
+
+              <%= form_for @review, url: reviews_path(place_id: @place.id, feature_id: fe.id, user_id: @current_user.id, like: true), method: :post do |r| %>
+                <p><%= r.button "like" %><p/>
+              <% end%>
+
+              <%= form_for @review, url: reviews_path(place_id: @place.id, feature_id: fe.id, user_id: @current_user.id, like: false), method: :post do |r| %>
+                <p><%= r.button "dont like" %><p/>
+              <% end%>
+
+            </li>
             <%end%>
           </ul>
         </div>
