--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -58,7 +58,8 @@
           </ul>
         </div>
         <div class="six wide right floated column">
-          <img src="https://static.pexels.com/photos/26906/pexels-photo-26906.jpg" class="ui large bordered rounded image">
+          <%= cl_image_tag @place.image %>
+          <!-- <img src="https://static.pexels.com/photos/26906/pexels-photo-26906.jpg" class="ui large bordered rounded image"> -->
         </div>
       </div>
     </div>
