--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -17,6 +17,8 @@
 
 
 <!-- ###################### map test   -->
+
+
   <div id="map"></div>
 
 <script>
@@ -40,5 +42,5 @@
   }
 </script>
 <script async defer
-src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDSawZrR6b_qDsmiGyxDwf65TpYlrdUz6o&callback=initMap"">
+src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDSawZrR6b_qDsmiGyxDwf65TpYlrdUz6o&callback=initMap">
 </script>
