--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -7,13 +7,22 @@
   <button class="ui button"><%= link_to "Add a cool place", new_place_path  %></button>
 <%end%>
 
-<ul>
+////
+
+<div class="ui items">
   <% @places.each do |place| %>
-    <li>
-      <%= link_to place.name, place_path(place.id) %>
-    </li>
-  <%end%>
-</ul>
+    <div class="item">
+      <div class="ui tiny image">
+        <%= cl_image_tag place.image %>
+      </div>
+      <div class="middle aligned content">
+        <%= link_to place.name, place_path(place.id) %>
+      </div>
+    </div>
+  <% end %>
+</div>
+
+
 
 
 <!-- ###################### map test   -->
