--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -13,7 +13,7 @@
 <div class="ui vertical stripe segment">  <!-- the div with details, features, image and map  -->
   <div class="ui middle aligned stackable grid container">
     <div class="row">
-      <div class="eight wide column">  <!-- left column: details, features-->
+      <div class="eight wide column">    <!-- <<</!->- left column: details, features-->
         <div class="ui accordion">
           <div class="title">
             <i class="dropdown icon"></i>
@@ -49,9 +49,21 @@
               <tr>
                 <td><%= link_to fe.feature_name, feature_path(fe.id) %>  </td>
                 <% if @current_user %>
-
                   <!-- If a review has NOT been created for the feature by the current user -->
                   <% if @reviewed[fe.id] == nil %>
+
+                    <td>
+                      <!-- The like button -->
+                      <%= form_for @review, url: reviews_path(place_id: @place.id, feature_id: fe.id, user_id: @current_user.id, like: true), method: :post do |r| %>
+                      <button class="ui basic icon button">
+                        <i class="thumbs outline up icon"></i>
+                      </button>
+                      <% end%>
+                    </td>
+                    <td class="likesCount">
+                      <%= fe.review_counts(@place.id)[true] || 0 %>
+                    </td>
+
                     <td>
                       <!-- The dont like button -->
                       <%= form_for @review, url: reviews_path(place_id: @place.id, feature_id: fe.id, user_id: @current_user.id, like: false), method: :post do |r| %>
@@ -61,23 +73,24 @@
                       <% end%>
                     </td>
                     <td class="likesCount">
-                      <%= fe.review_counts[false] || 0 %>
+                      <%= fe.review_counts(@place.id)[false] || 0 %>
                     </td>
 
-                    <td>
-                      <!-- The like button -->
-                      <%= form_for @review, url: reviews_path(place_id: @place.id, feature_id: fe.id, user_id: @current_user.id, like: true), method: :post do |r| %>
-                        <button class="ui basic icon button">
-                          <i class="thumbs outline up icon"></i>
-                        </button>
-                      <% end%>
-                    </td>
-                    <td class="likesCount">
-                      <%= fe.review_counts[true] || 0 %>
-                    </td>
 
                   <!-- If a review has been created for the feature by the current user -->
                   <%else%>
+                    <!-- The like icon -->
+                    <td>
+                      <% if @reviewed[fe.id] == true %>
+                      <i class="thumbs up icon alone"></i>
+                      <% else %>
+                      <i class="thumbs outline up icon alone"></i>
+                      <% end%>
+                    </td>
+                    <td class="likesCount">
+                      <%= fe.review_counts(@place.id)[true] || 0 %>
+                    </td>
+
                     <!-- The dont like icon -->
                     <td>
                       <% if @reviewed[fe.id] == true %>
@@ -87,20 +100,9 @@
                       <% end %>
                     </td>
                     <td class="likesCount">
-                      <%= fe.review_counts[false] || 0 %>
+                      <%= fe.review_counts(@place.id)[false] || 0 %>
                     </td>
 
-                    <!-- The like icon -->
-                    <td>
-                      <% if @reviewed[fe.id] == true %>
-                        <i class="thumbs up icon alone"></i>
-                      <% else %>
-                        <i class="thumbs outline up icon alone"></i>
-                      <% end%>
-                    </td>
-                    <td class="likesCount">
-                      <%= fe.review_counts[true] || 0 %>
-                    </td>
                   <%end%>
                 <%end%>
               <tr>
@@ -124,7 +126,7 @@
             new google.maps.Marker({
               map: map,
               position: {lat: <%=@place.latitude%>, lng: <%=@place.longitude%>},
-              title: '<% @place.name %>'
+              title: "<%= @place.name %>"
             });
           }
         </script>
