heroku - trying again to update, like buttons not working

--- a/app/views/places/edit.html.erb
+++ b/app/views/places/edit.html.erb
@@ -18,19 +18,19 @@
       </p>
       <h4> Address </h4>
       <p>
-        <%= p.label :int_number %>
+        <%= "Suite / Apartment Number" %>
       </p>
       <p>
         <%= p.text_field :int_number %>
       </p>
       <p>
-        <%= "Number" %>
+        <%= "Street Number" %>
       </p>
       <p>
         <%= p.text_field :street_number %>
       </p>
       <p>
-        <%= "Street" %>
+        <%= "Street Name" %>
       </p>
       <p>
         <%= p.text_field :street_name %>
