final version before presentation

--- a/app/views/includes/_footer.html.erb
+++ b/app/views/includes/_footer.html.erb
@@ -3,8 +3,7 @@
 
 
     <div class="ui horizontal inverted small divided link list">
-      <a class="item" href="#">Created by Diego</a>
-      <a class="item" href="#">Readme file</a>
+      <a class="item" href="https://github.com/diego2017/Project1">Created by Diego</a>
     </div>
   </div>
 </div>
