--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -2,12 +2,14 @@
 <h1><%= @place.name %></h1>
 
 <!-- only the user who created the place can edit or delete it -->
-<% if @current_user.id == @place.user_id %>
-  <div class="ui buttons">
-    <button class="ui button"><%= link_to "Delete Venue", place_path(place_id: @place.id), method: :delete %></button>
-    <button class="ui button"><%= link_to "Edit Venue", edit_place_path(place_id: @place.id)%></button>
-  </div>
-<%end%>
+<% if @current_user %>
+  <% if @current_user.id == @place.user_id %>
+    <div class="ui buttons">
+      <button class="ui button"><%= link_to "Delete Venue", place_path(place_id: @place.id), method: :delete %></button>
+      <button class="ui button"><%= link_to "Edit Venue", edit_place_path(place_id: @place.id)%></button>
+    </div>
+  <%end%>
+<% end%>
 
 <p> </p>
 
