--- a/app/views/features/show.html.erb
+++ b/app/views/features/show.html.erb
@@ -1,6 +1,7 @@
 <h1><%= @feature.feature_name %></h1>
 <h3>You can find it in:</h3>
 <ul>
+  <!-- creates a list of places that include the clicked feature -->
   <% @feature.places.each do |pl| %>
     <li><%= link_to pl.name, place_path(pl.id) %></li>
   <%end%>
